sports-day/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: sportsday
  labels:
    name: sportsday
