sports-day/argocd-external-service.yml
apiVersion: v1
kind: Service
metadata:
  name: argocd-external-service
  namespace: sportsday
spec:
  type: ExternalName
  externalName: argocd-server.argocd.svc.cluster.local
  ports:
    - port: 80
