sports-day/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: sportsday
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 0
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: backend
        network/database: "true"
    spec:
      containers:
        - name: sportsdayapi
          image: ghcr.io/sports-day/sportsdayapi:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            failureThreshold: 20
            initialDelaySeconds: 0
            periodSeconds: 5
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "2048Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: sportsday
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
