sports-day/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: sportsday
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: "1000m"
              memory: "1024Mi"
            limits:
              cpu: "2000m"
              memory: "2048Mi"
          volumeMounts:
            - mountPath: /data
              name: redis-save
      volumes:
        - name: redis-save
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: sportsday
  labels:
    app: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
  selector:
    app: redis
  type: ClusterIP
